[gd_scene load_steps=10 format=3 uid="uid://cm0r0n648lnh0"]

[ext_resource type="Script" path="res://menu/mainMenu.gd" id="1_0y1yl"]
[ext_resource type="Texture2D" uid="uid://bfscns4n5ny7e" path="res://assets/cave-tileset-free/Background.png" id="2_wsld8"]
[ext_resource type="Texture2D" uid="uid://u6ffipvnqqce" path="res://assets/pixel-adventure/Menu/Buttons/Play.png" id="4_uq31w"]
[ext_resource type="Texture2D" uid="uid://c2ovflm8degad" path="res://assets/pixel-adventure/Menu/Buttons/Settings.png" id="5_gvkiw"]
[ext_resource type="Texture2D" uid="uid://bv2vqrus4e0r2" path="res://assets/pixel-adventure/Menu/Buttons/Close.png" id="6_1f38h"]
[ext_resource type="Texture2D" uid="uid://dlawsmjsr4top" path="res://assets/cave-tileset-free/Tiles.png" id="6_rttlx"]

[sub_resource type="SystemFont" id="SystemFont_6u6jy"]
font_names = PackedStringArray("Press Start 2P")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e2cit"]
texture = ExtResource("6_rttlx")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0

[sub_resource type="TileSet" id="TileSet_w5rmw"]
sources/0 = SubResource("TileSetAtlasSource_e2cit")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_0y1yl")

[node name="background" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_wsld8")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.686275, 0.627451, 0.521569, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_6u6jy")
theme_override_font_sizes/font_size = 64
text = "The BAM Game"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayBtn" type="Button" parent="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
icon = ExtResource("4_uq31w")
flat = true
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = -1
alignment = 1

[node name="SettingsBtn" type="Button" parent="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
icon = ExtResource("5_gvkiw")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Seperator4" type="Control" parent="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
icon = ExtResource("6_1f38h")
flat = true
icon_alignment = 1
expand_icon = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_w5rmw")
format = 2
layer_0/tile_data = PackedInt32Array(1769472, 327680, 0, 1835008, 458752, 4, 1900544, 196608, 2, 1966080, 196608, 2, 2031616, 196608, 2, 2097152, 196608, 2, 2162688, 196608, 2, 2228224, 196608, 2, 2293760, 131072, 2, 2359296, 131072, 2, 2424832, 131072, 2, 2490368, 131072, 2, 2555904, 131072, 2, 1835009, 262144, 0, 1900545, 262144, 1, 1966081, 196608, 2, 2031617, 196608, 2, 2097153, 196608, 2, 2162689, 196608, 2, 2228225, 196608, 2, 2293761, 131072, 2, 2359297, 131072, 2, 2424833, 131072, 2, 2490369, 131072, 2, 2555905, 131072, 2, 1835010, 327680, 0, 1900546, 458752, 4, 1966082, 196608, 2, 2031618, 196608, 2, 2097154, 196608, 2, 2162690, 196608, 2, 2228226, 196608, 2, 2293762, 131072, 2, 2359298, 131072, 2, 2424834, 131072, 2, 2490370, 131072, 2, 2555906, 131072, 2, 1900547, 262144, 0, 1966083, 262144, 1, 2031619, 196608, 2, 2097155, 196608, 2, 2162691, 196608, 2, 2228227, 196608, 2, 2293763, 131072, 2, 2359299, 131072, 2, 2424835, 131072, 2, 2490371, 131072, 2, 2555907, 131072, 2, 1900548, 327680, 0, 1966084, 458752, 4, 2031620, 196608, 1, 2097156, 196608, 2, 2162692, 196608, 2, 2228228, 196608, 2, 2293764, 131072, 2, 2359300, 131072, 2, 2424836, 131072, 2, 2490372, 131072, 2, 2555908, 131072, 2, 1966085, 262144, 0, 2031621, 196608, 1, 2097157, 196608, 2, 2162693, 196608, 2, 2228229, 196608, 2, 2293765, 131072, 2, 2359301, 131072, 2, 2424837, 131072, 2, 2490373, 131072, 2, 2555909, 131072, 2, 1966086, 262144, 0, 2031622, 196608, 1, 2097158, 196608, 2, 2162694, 196608, 2, 2228230, 196608, 2, 2293766, 131072, 2, 2359302, 131072, 2, 2424838, 131072, 2, 2490374, 131072, 2, 2555910, 131072, 2, 1966087, 262144, 0, 2031623, 196608, 1, 2097159, 196608, 2, 2162695, 196608, 2, 2228231, 196608, 2, 2293767, 131072, 2, 2359303, 131072, 2, 2424839, 131072, 2, 2490375, 131072, 2, 2555911, 131072, 2, 1966088, 262144, 0, 2031624, 262144, 1, 2097160, 196608, 2, 2162696, 196608, 2, 2228232, 196608, 2, 2293768, 131072, 2, 2359304, 131072, 2, 2424840, 131072, 2, 2490376, 131072, 2, 2555912, 131072, 2, 1966089, 327680, 0, 2031625, 327680, 2, 2097161, 458752, 4, 2162697, 196608, 2, 2228233, 196608, 2, 2293769, 131072, 2, 2359305, 131072, 2, 2424841, 131072, 2, 2490377, 131072, 2, 2555913, 131072, 2, 2097162, 262144, 0, 2162698, 262144, 1, 2228234, 196608, 2, 2293770, 131072, 2, 2359306, 131072, 2, 2424842, 131072, 2, 2490378, 131072, 2, 2555914, 131072, 2, 2097163, 327680, 0, 2162699, 458752, 4, 2228235, 196608, 2, 2293771, 131072, 2, 2359307, 131072, 2, 2424843, 131072, 2, 2490379, 131072, 2, 2555915, 131072, 2, 2162700, 262144, 0, 2228236, 196608, 1, 2293772, 131072, 2, 2359308, 131072, 2, 2424844, 131072, 2, 2490380, 131072, 2, 2555916, 131072, 2, 2162701, 262144, 0, 2228237, 262144, 1, 2293773, 393216, 4, 2359309, 393216, 5, 2424845, 131072, 2, 2490381, 131072, 2, 2555917, 131072, 2, 2228238, 327680, 1, 2293774, 458752, 4, 2359310, 458752, 5, 2424846, 131072, 2, 2490382, 131072, 2, 2555918, 131072, 2, 2293775, 65536, 0, 2359311, 65536, 1, 2424847, 131072, 2, 2490383, 131072, 2, 2555919, 131072, 2, 2293776, 131072, 0, 2359312, 131072, 1, 2424848, 131072, 2, 2490384, 131072, 2, 2555920, 131072, 2, 2293777, 196608, 0, 2359313, 196608, 1, 2424849, 131072, 2, 2490385, 131072, 2, 2555921, 131072, 2, 2293778, 262144, 0, 2359314, 262144, 1, 2424850, 131072, 2, 2490386, 131072, 2, 2555922, 131072, 2, 2293779, 65536, 0, 2359315, 65536, 1, 2424851, 131072, 2, 2490387, 131072, 2, 2555923, 131072, 2, 2293780, 131072, 0, 2359316, 131072, 1, 2424852, 131072, 2, 2490388, 131072, 2, 2555924, 131072, 2, 2293781, 655360, 4, 2359317, 196608, 1, 2424853, 131072, 2, 2490389, 131072, 2, 2555925, 131072, 2, 2293782, 131072, 1, 2359318, 196608, 3, 2424854, 131072, 2, 2490390, 131072, 2, 2555926, 131072, 2, 2293783, 196608, 1, 2359319, 196608, 3, 2424855, 131072, 2, 2490391, 131072, 2, 2555927, 131072, 2, 2293784, 65536, 1, 2359320, 196608, 3, 2424856, 131072, 2, 2490392, 131072, 2, 2555928, 131072, 2, 2293785, 720896, 5, 2359321, 196608, 3, 2424857, 131072, 2, 2490393, 131072, 2, 2555929, 131072, 2, 2293786, 196608, 3, 2359322, 196608, 3, 2424858, 131072, 2, 2490394, 131072, 2, 2555930, 131072, 2, 2293787, 196608, 3, 2359323, 196608, 3, 2424859, 131072, 2, 2490395, 131072, 2, 2555931, 131072, 2, 2293788, 196608, 3, 2359324, 196608, 3, 2424860, 131072, 2, 2490396, 131072, 2, 2555932, 131072, 2, 2293789, 196608, 3, 2359325, 196608, 3, 2424861, 196608, 3, 2490397, 131072, 2, 2555933, 131072, 2, 2293790, 196608, 2, 2359326, 196608, 2, 2424862, 131072, 2, 2490398, 131072, 2, 2555934, 131072, 2, 2293791, 196608, 2, 2359327, 196608, 2, 2424863, 131072, 2, 2490399, 131072, 2, 2555935, 131072, 2, 2293792, 196608, 2, 2359328, 196608, 2, 2424864, 131072, 2, 2490400, 131072, 2, 2555936, 131072, 2, 2293793, 196608, 2, 2359329, 196608, 2, 2424865, 131072, 2, 2490401, 131072, 2, 2555937, 131072, 2, 2293794, 196608, 2, 2359330, 196608, 2, 2424866, 131072, 2, 2490402, 131072, 2, 2555938, 131072, 2, 2293795, 196608, 2, 2359331, 196608, 2, 2424867, 131072, 2, 2490403, 131072, 2, 2555939, 131072, 2, 2293796, 196608, 2, 2359332, 196608, 2, 2424868, 131072, 2, 2490404, 131072, 2, 2555940, 131072, 2, 2293797, 196608, 2, 2359333, 196608, 2, 2424869, 131072, 2, 2490405, 131072, 2, 2555941, 131072, 2, 2293798, 196608, 2, 2359334, 196608, 2, 2424870, 131072, 2, 2490406, 131072, 2, 2555942, 131072, 2, 2293799, 196608, 2, 2359335, 196608, 2, 2424871, 131072, 2, 2490407, 131072, 2, 2555943, 131072, 2, 2293800, 196608, 2, 2359336, 196608, 2, 2424872, 131072, 2, 2490408, 131072, 2, 2555944, 131072, 2, 2293801, 196608, 2, 2359337, 196608, 2, 2424873, 131072, 2, 2490409, 131072, 2, 2555945, 131072, 2, 2293802, 196608, 2, 2359338, 196608, 2, 2424874, 131072, 2, 2490410, 131072, 2, 2555946, 131072, 2, 2293803, 262144, 3, 2359339, 393216, 5, 2424875, 131072, 2, 2490411, 131072, 2, 2555947, 131072, 2, 2293804, 458752, 4, 2359340, 131072, 1, 2424876, 131072, 2, 2490412, 131072, 2, 2555948, 131072, 2, 2293805, 131072, 0, 2359341, 131072, 1, 2424877, 131072, 2, 2490413, 131072, 2, 2555949, 131072, 2, 2293806, 131072, 0, 2359342, 196608, 1, 2424878, 131072, 2, 2490414, 131072, 2, 2555950, 131072, 2, 2293807, 131072, 0, 2359343, 131072, 1, 2424879, 131072, 2, 2490415, 131072, 2, 2555951, 131072, 2, 2293808, 131072, 0, 2359344, 131072, 1, 2424880, 131072, 2, 2490416, 131072, 2, 2555952, 131072, 2, 2293809, 196608, 0, 2359345, 196608, 1, 2424881, 131072, 2, 2490417, 131072, 2, 2555953, 131072, 2, 2293810, 262144, 0, 2359346, 262144, 1, 2424882, 131072, 2, 2490418, 131072, 2, 2555954, 131072, 2, 2293811, 65536, 0, 2359347, 65536, 1, 2424883, 131072, 2, 2490419, 131072, 2, 2555955, 131072, 2, 2293812, 131072, 0, 2359348, 131072, 1, 2424884, 131072, 2, 2490420, 131072, 2, 2555956, 131072, 2, 2293813, 196608, 0, 2359349, 196608, 1, 2424885, 131072, 2, 2490421, 131072, 2, 2555957, 131072, 2, 2293814, 262144, 0, 2359350, 262144, 1, 2424886, 131072, 2, 2490422, 131072, 2, 2555958, 131072, 2, 2293815, 65536, 0, 2359351, 65536, 1, 2424887, 131072, 2, 2490423, 131072, 2, 2555959, 131072, 2, 2293816, 131072, 0, 2359352, 131072, 1, 2424888, 131072, 2, 2490424, 131072, 2, 2555960, 131072, 2, 2293817, 196608, 0, 2359353, 196608, 1, 2424889, 131072, 2, 2490425, 131072, 2, 2555961, 131072, 2, 2293818, 262144, 0, 2359354, 262144, 1, 2424890, 131072, 2, 2490426, 131072, 2, 2555962, 131072, 2, 2621440, 131072, 2, 2621441, 131072, 2, 2621442, 131072, 2, 2621443, 131072, 2, 2621444, 131072, 2, 2621445, 131072, 2, 2621446, 131072, 2, 2621447, 131072, 2, 2621448, 131072, 2, 2621449, 131072, 2, 2621450, 131072, 2, 2621451, 131072, 2, 2621452, 131072, 2, 2621453, 131072, 2, 2621454, 131072, 2, 2621455, 131072, 2, 2621456, 131072, 2, 2621457, 131072, 2, 2621458, 131072, 2, 2621459, 131072, 2, 2621460, 131072, 2, 2621461, 131072, 2, 2621462, 131072, 2, 2621463, 131072, 2, 2621464, 131072, 2, 2621465, 131072, 2, 2621466, 131072, 2, 2621467, 131072, 2, 2621468, 131072, 2, 2621469, 131072, 2, 2621470, 131072, 2, 2621471, 131072, 2, 2621472, 131072, 2, 2621473, 131072, 2, 2621474, 131072, 2, 2621475, 131072, 2, 2621476, 131072, 2, 2621477, 131072, 2, 2621478, 131072, 2, 2621479, 131072, 2, 2621480, 131072, 2, 2621481, 131072, 2, 2621482, 131072, 2, 2621483, 131072, 2, 2621484, 131072, 2, 2621485, 131072, 2, 2621486, 131072, 2, 2621487, 131072, 2, 2621488, 131072, 2, 2621489, 131072, 2, 2621490, 131072, 2, 2621491, 131072, 2, 2621492, 131072, 2, 2621493, 131072, 2, 2621494, 131072, 2, 2621495, 131072, 2, 2621496, 131072, 2, 2621497, 131072, 2, 2621498, 131072, 2, 2162702, 327680, 0, 2228245, 0, 0, 2228246, 65536, 0, 2228247, 65536, 0, 2228248, 655360, 4, 2162712, 0, 1, 2097176, 0, 1, 2031640, 0, 0, 2031641, 131072, 0, 2031642, 131072, 0, 2031643, 131072, 0, 2031644, 327680, 0, 2228252, 196608, 3, 2228253, 196608, 3, 2228249, 65536, 3, 2162713, 65536, 2, 2097177, 65536, 1, 2097178, 196608, 1, 2097179, 131072, 1, 2162716, 458752, 5, 2228251, 196608, 3, 2228250, 196608, 3, 2162714, 196608, 3, 2097180, 458752, 4, 2162717, 458752, 4, 2162715, 196608, 3, 2097181, 327680, 0, 2162718, 131072, 0, 2162719, 131072, 0, 2162720, 131072, 0, 2162721, 131072, 0, 2162722, 131072, 0, 2162723, 131072, 0, 2162724, 131072, 0, 2162725, 131072, 0, 2162726, 655360, 4, 2031654, 0, 0, 2097190, 0, 3, 2031655, 131072, 0, 2031656, 131072, 0, 2031657, 655360, 4, 1966121, 0, 0, 1966122, 65536, 0, 1966123, 65536, 0, 1966124, 327680, 0, 2228254, 131072, 1, 2228255, 196608, 1, 2228256, 131072, 1, 2228257, 196608, 1, 2228258, 131072, 1, 2228259, 196608, 1, 2228260, 131072, 1, 2228261, 196608, 1, 2097191, 131072, 1, 2097192, 196608, 1, 2031658, 131072, 1, 2031659, 262144, 1, 2097193, 720896, 5, 2097194, 196608, 2, 2228262, 720896, 5, 2228263, 196608, 2, 2228264, 196608, 2, 2228265, 196608, 2, 2228266, 196608, 2, 2228267, 262144, 3, 2228268, 327680, 1, 2162727, 196608, 2, 2162728, 196608, 2, 2162729, 196608, 2, 2162730, 196608, 2, 2162731, 262144, 3, 2162732, 327680, 1, 2162733, 196608, 2, 2097195, 262144, 2, 2097196, 327680, 2, 2162734, 196608, 2, 2097197, 196608, 2, 2097198, 196608, 2, 2031660, 327680, 1, 1966141, 0, 0, 2031677, 0, 2, 2097213, 0, 2, 2162749, 655360, 4, 2359357, 720896, 5, 2424893, 131072, 2, 2490429, 131072, 2, 2555965, 131072, 2, 2621501, 131072, 2, 1966142, 262144, 0, 2031678, 196608, 1, 2097214, 65536, 2, 2162750, 720896, 4, 2228286, 720896, 5, 2293822, 131072, 2, 2359358, 131072, 2, 2424894, 131072, 2, 2490430, 131072, 2, 2555966, 131072, 2, 2621502, 131072, 2, 1966143, 262144, 0, 2031679, 196608, 1, 2097215, 196608, 2, 2162751, 196608, 2, 2228287, 196608, 2, 2293823, 131072, 2, 2359359, 131072, 2, 2424895, 131072, 2, 2490431, 131072, 2, 2555967, 131072, 2, 2621503, 131072, 2, 1966144, 262144, 0, 2031680, 262144, 1, 2097216, 196608, 2, 2162752, 196608, 2, 2228288, 196608, 2, 2293824, 131072, 2, 2359360, 131072, 2, 2424896, 131072, 2, 2490432, 131072, 2, 2555968, 131072, 2, 2621504, 131072, 2, 1966145, 327680, 0, 2031681, 327680, 2, 2097217, 458752, 4, 2162753, 196608, 2, 2228289, 196608, 2, 2293825, 131072, 2, 2359361, 131072, 2, 2424897, 131072, 2, 2490433, 131072, 2, 2555969, 131072, 2, 2621505, 131072, 2, 2097218, 262144, 0, 2162754, 262144, 1, 2228290, 196608, 2, 2293826, 131072, 2, 2359362, 131072, 2, 2424898, 131072, 2, 2490434, 131072, 2, 2555970, 131072, 2, 2621506, 131072, 2, 2097219, 327680, 0, 2162755, 458752, 4, 2228291, 196608, 2, 2293827, 131072, 2, 2359363, 131072, 2, 2424899, 131072, 2, 2490435, 131072, 2, 2555971, 131072, 2, 2621507, 131072, 2, 2162756, 262144, 0, 2228292, 196608, 1, 2293828, 131072, 2, 2359364, 131072, 2, 2424900, 131072, 2, 2490436, 131072, 2, 2555972, 131072, 2, 2621508, 131072, 2, 2162757, 262144, 0, 2228293, 262144, 1, 2293829, 393216, 4, 2359365, 393216, 5, 2424901, 131072, 2, 2490437, 131072, 2, 2555973, 131072, 2, 2621509, 131072, 2, 2162758, 327680, 0, 2228294, 327680, 1, 2293830, 458752, 4, 2359366, 458752, 5, 2424902, 131072, 2, 2490438, 131072, 2, 2555974, 131072, 2, 2621510, 131072, 2, 2293819, 131072, 0, 2359355, 131072, 1, 2424891, 131072, 3, 2490427, 131072, 3, 2555964, 131072, 3, 2621500, 131072, 3, 2359356, 655360, 5, 2424892, 131072, 3, 2490428, 131072, 3, 2555963, 131072, 3, 2621499, 131072, 3, 2293820, 655360, 4, 2228284, 0, 2, 2162748, 0, 0, 2228285, 655360, 5, 2293821, 720896, 4, 2293831, 131072, 0, 2359367, 131072, 1, 2424903, 196608, 2, 2490439, 196608, 2, 2555975, 196608, 2, 2621511, 196608, 2)

[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer2/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
